# tmp

./: CaseTest.xlsx  README.md  TestCase.xlsx  Спецификация требований.docx
ConsoleClient/: ConsoleClient.pro  main.cpp  singltoneclient.cpp  singltoneclient.h
UnitTest/: README.md
UnitTest/UnitTest_1/: UnitTest_1.pro
UnitTest/UnitTest_2/: UnitTest_2.pro
UnitTest/UnitTest_3/: UnitTest_3.pro  equation_solver.cpp  equation_solver.h  (+3 more)
client/: Interface.pro  authdialog.cpp  authdialog.h  authdialog.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reg.cpp  reg.ui  regdialog.cpp  regdialog.ui  singltoneclient.cpp  singltoneclient.h
client_doxygen/: annotated_dup.js  class_auth_reg_container.html  hierarchy.html  hierarchy.js  index.html  navtreeindex0.js  regdialog_8h_source.html  singletonclient_8h_source.html
docker-server/: .dockerignore
echoServer/: CMakeLists.txt
echoServer/include/: mytcpserver.h
echoServer/src/: mytcpserver.cpp
html/: annotated.html  authdialog_8h_source.html  class_auth_reg_container-members.html  class_database_manager.html  class_s_h_a384.html  class_singleton_client-members.html  class_tcp_server.html  doxygen_crawl.html  files.html  hierarchy.js  index.html  mainwindow_8h_source.html  mytcpserver_8h_source.html  navtreeindex0.js
server/: Server.pro  databasemanager.cpp  dbmanager.cpp  dbmanager.h  mytcpserver.cpp  mytcpserver.h  server.pro
server_doxygen/: annotated_dup.js  class_database_manager-members.html  classes.html  dbmanager_8h_source.html  hierarchy.html  sha384_8h_source.html
(+43 files in other folders)
